When mature, changes should be merged into master *as a merge commit*  and this changelog file updated.

In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 

26th June 2019
- USER: a bunch of bug fixes. Some fairly significant

10th June 2019
- USER: BakingTray is now compatible with ScanImage 5.6


7th June 2019
- USER: BakingTray can now often recover modelock failures of the laser
- USER: Confirmation dialog prior to Bake 
- USER: Checks that the correct PMTs are enabled before Bake


21st March 2019
- Tweaks to acquisition time estimate
- USER: Y stage moves to zero at the end of acquisition and before "sliceOnce"
- USER: Y cut pos edit box always disabled


4th March 2019
- USER: Improved acquisition time estimates (includes taking into account averaging)
- USER: Averaging disables when sample is complete
- Small GUI improvement: disable cut Y pos edit box
- Double-check laser is off-line before bailing out


14th February 2019
- USER: default front/left is now fully implemented
- USER: dev branch allows averaging in z-stacks with suitable ScanImage release


17th January 2019
- USER: scan zoom factor automatically set in ScanImage. But can still be over-ridden afterwards if needed. 
- USER: resonant scanner remains on after preview scan to encourage it to settle. It will still be switched off at the end of the acquisition. 


8th January 2019
- USER: Add ability to send Slack messages. **YOU WILL NEED TO UPDATE YOUR SYSTEM INI FILE**
- DEVELOPER: default front/left present in sys INI file but not implemented fully. **YOU WILL NEED TO UPDATE YOUR SYSTEM INI FILE **
 Instructions:
 For the above, the easiest way is to move your system ini file to the back up settings dir. 
 Then run BakingTray.settings.readSystemSettings and manually add back your original settings 