@@ -1,4 +1,4 @@
 function addBTtopath
-	%add BakingTray dirs to path (useful for testing)
-	addpath(genpath(fullfile(pwd,'code')));
+    %add BakingTray dirs to path (useful for testing)
+    addpath(genpath(fullfile(pwd,'code')));
 end
